<resources>
    <string name="app_name">Blogchain</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home" translatable="false">Ana Sayfa</string>
    <string name="menu_about" translatable="false">Hakkında</string>
    <string name="menu_exit" translatable="false">Çıkış</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="loading">Loading…</string>
    <string name="drawer_item_all_coins">All coins</string>
    <string name="drawer_item_portfolio">Portfolio</string>
    <string name="drawer_item_exchanges">Exchanges</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="add_google_account">Add Google account</string>
    <string name="search">Search…</string>
    <string name="drawer_item_ico" translatable="false">ICO</string>
    <string name="drawer_item_mining">Mining</string>
    <string name="hour_price_change">1h:</string>
    <string name="day_price_change">24h:</string>
    <string name="week_price_change">7d:</string>
    <string name="calculator">Calculator</string>
    <string name="coins">Coins</string>
    <string name="all_selected">All selected</string>
    <string name="usd" translatable="false">USD</string>
    <string name="btc" translatable="false">BTC</string>
    <string name="unexpected_error">Ooooops</string>
    <string name="miners">Miners</string>
    <string name="drawer_item_statistics">Statistics</string>
    <string name="drawer_item_converter">Converter</string>
    <string name="difficulty_item">Difficulty:</string>
    <string name="profitability_item">Profitability:</string>
    <string name="revenue24_item">Revenue24h:</string>
    <string name="information">Information</string>
    <string name="filter">Filter</string>
    <string name="gpu_caps" translatable="false">GPU</string>
    <string name="gpu_coins_info">In list below presented profitability of coins in comparison to Ethereum (ETH has profitability 100%) All rewards are adapted for three Radeon RX480 cards</string>
    <string name="asic_coins_info">In list below presented profitability of coins in comparison to Bitcoin (BTC has profitability 100%) SHA-256 rewards are adapted for Antminer S9. For Scrypt using the same power usage of 1370W and hashrate calculated at 11W/MHS.</string>
    <string name="asic_caps" translatable="false">ASIC</string>
    <string name="sort">Sort</string>
    <string name="sort_order">Sort order</string>
    <string name="market_cap">Market cap</string>
    <string name="coin_price">Coin price</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="volume_24h">Volume 24h</string>
    <string name="winners_24h">Winners 24h</string>
    <string name="losers_24h">Losers 24h</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort by</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="ok" translatable="false">OK</string>
    <string name="whats_new">What\'s new?</string>
    <string name="downloading_blockchain">Downloading blockchain</string>
    <string name="something_went_wrong">Ops. Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="there_is_nothing_with_such_filter">There is nothing with such filter</string>
    <string name="coin">Coin</string>
    <string name="powered_by_whattomine.com" translatable="false">Powered by whattomine.com</string>
    <string name="select_coin">Select coin</string>
    <string name="hashrate">Hashrate</string>
    <string name="hashrate_example">E.g. 1400</string>
    <string name="mhs" translatable="false">Mh/s</string>
    <string name="ghs" translatable="false">Gh/s</string>
    <string name="power">Power</string>
    <string name="power_example">E.g. 800</string>
    <string name="watt">Watt</string>
    <string name="add_more_options">Add more options</string>
    <string name="calculate">Calculate</string>
    <string name="per">Per</string>
    <string name="rev_dot">Rev.</string>
    <string name="rev_dollars">Rev. $</string>
    <string name="cost">Cost</string>
    <string name="profit">Profit</string>
    <string name="estimated_rewards">Estimated rewards</string>
    <string name="hour">Hour</string>к
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="error">Error</string>
    <string name="percent_sign" translatable="false">%</string>
    <string name="dollars_for_kwh">$/kWh</string>
    <string name="poll_fee">Poll fee</string>
    <string name="remove_options">Remove options</string>
    <string name="banner_currencies_list" translatable="false">ca-app-pub-4946735304037594/6033211182</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-4946735304037594~5659173642</string>
    <string name="drawer_item_ad">Don\'t touch!</string>
    <string name="dont_touch_interstitial" translatable="false">ca-app-pub-4946735304037594/7916551764</string>
    <string name="admob_test_device" translatable="false">6D52FC8438981F070E41819319BD9543</string>
    <string name="banner_mining_calculator" translatable="false">ca-app-pub-4946735304037594/9843521732</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="banner_watchlist_list" translatable="false">ca-app-pub-4946735304037594/3483288631</string>
    <string name="is_now_in_watchlist">is now in watchlist</string>
    <string name="pick_favourite_coin">Pick favourite coin</string>
    <string name="drawer_item_home">Home</string>
    <string name="not_so_fast">Not so fast</string>
    <string name="dashboard">Dashboard</string>
    <string name="all_coins">All coins</string>
    <string name="remove_from_favourite_question">Remove this coin from allFavourites?</string>
    <string name="your_portfolio">Your portfolio</string>
    <string name="current_balance">Current balance</string>
    <string name="amount_of_coins">Amount of coins</string>
    <string name="buy_coin_price">Buy coin price</string>
    <string name="add_to_portfolio">Add to portfolio</string>
    <string name="storage_type">Storage type</string>
    <string name="optional">Optional</string>
    <string name="wallet_name">Wallet name</string>
    <string name="exchange_name">Exchange name</string>
    <string name="amount_of_coins_should_not_be_empty">Amount of coins should not be empty</string>
    <string name="dollar_sign" translatable="false">$</string>
    <string name="no_items_in_portfolio">You have no coins in portfolio</string>
    <string name="no_favourite_coins">You have no favourite coins</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="remove_from_portfolio_question">Remove this coin from portfolio?</string>
    <string name="description">Description</string>
    <string name="fiat">Fiat</string>
    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="favourites">Favourites</string>
    <string name="popular">Popular</string>
    <string name="other">Other</string>
    <string name="currencies">Currencies</string>
    <string name="amount">Amount</string>
    <string name="swap">Swap</string>
    <string name="clear">Clear</string>
    <string name="portfolios_balance">Portfolios balance</string>
    <string name="news">News</string>
    <string name="just_now">Just now</string>
    <string name="minute_ago">Minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hour_ago">Hour ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="lang_check">en</string>
    <string name="last_update">Last update</string>
    <string name="never">Never</string>
    <string name="show_hide_portfolio">Hide/show portfolio</string>
    <string name="btc_dominance">BTC Dominance</string>
    <string name="drawer_item_events">Events</string>
    <string name="update_error">Update error</string>
    <string name="undo">Undo</string>

    <string-array name="miner_filters">
        <item>All categories</item>
        <item>ASIC</item>
        <item>GPU</item>
        <item>Refurbished GPU</item>
        <item>Rig</item>
        <item>Rig Bundle</item>
        <item>USB</item>
        <item>Chip</item>
        <item>SHA256</item>
        <item>Scrypt</item>
        <item>Ethash</item>
        <item>Equihash</item>
        <item>X11</item>
        <item>CryptoNight</item>
    </string-array>

    <string-array name="storage_types">
        <item>Software wallet</item>
        <item>Hardware wallet</item>
        <item>Exchange</item>
    </string-array>

    <string-array name="fiat_currencies_names">
        <item>United States Dollar</item>
        <item>Euro</item>
        <item>British pound</item>
        <item>Japanese yen</item>
        <item>Russian ruble</item>

        <item>Australian dollar</item>
        <item>Brazilian real</item>
        <item>Canadian dollar</item>
        <item>Swiss franc</item>
        <item>Chilean peso</item>
        <item>Chinese yuan</item>
        <item>Czech koruna</item>
        <item>Danish krone</item>
        <item>Hong Kong dollar</item>
        <item>Hungarian forint</item>
        <item>Indonesian rupiah</item>
        <item>Israeli new shekel</item>
        <item>Indian rupee</item>
        <item>South Korean won</item>
        <item>Mexican peso</item>
        <item>Malaysian ringgit</item>
        <item>Norwegian krone</item>
        <item>New Zealand dollar</item>
        <item>Philippine piso</item>
        <item>Pakistani rupee</item>
        <item>Polish złoty</item>
        <item>Swedish krona</item>
        <item>Singapore dollar</item>
        <item>Thai baht</item>
        <item>Turkish lira</item>
        <item>New Taiwan dollar</item>
        <item>South African rand</item>
    </string-array>

    <string-array name="fiat_currencies_symbols" translatable="false">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>RUB</item>

        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>TWD</item>
        <item>ZAR</item>
    </string-array>

</resources>


