<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:title="@string/calculator"
                android:background="?attr/colorPrimary" />
        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/bottom_bar_height"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_mining_calculator">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/appBar"
        android:id="@+id/calculator_scroll_view"
        android:layout_marginBottom="@dimen/bottom_bar_with_ad_height"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/loading_error_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="160dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/calculator_view"
                android:visibility="gone"
                android:layout_margin="@dimen/standard_dimen"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/powered_by_whattomine.com"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_dimen"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:text="@string/coin"/>

                    <ImageView
                        android:layout_marginStart="@dimen/double_dimen"
                        android:layout_gravity="center"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/coin_icon"/>

                    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                        android:layout_marginStart="@dimen/standard_dimen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/mining_coin_spinner"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_dimen"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:text="@string/hashrate"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:id="@+id/hashrate_edit_text"
                        android:inputType="numberDecimal"
                        android:hint="@string/hashrate_example"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_underlineColor="@color/colorPrimary"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_floatingLabelTextColor="@color/colorPrimary"
                        app:met_floatingLabel="none"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:id="@+id/hashrate_exponent_value"
                        android:paddingStart="@dimen/half_standard_dimen"
                        android:text="@string/mhs"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_dimen"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_normal"
                        android:text="@string/power"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:id="@+id/power_edit_text"
                        android:inputType="numberDecimal"
                        android:hint="@string/power_example"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_underlineColor="@color/colorPrimary"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_floatingLabelTextColor="@color/colorPrimary"
                        app:met_floatingLabel="none"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:paddingStart="@dimen/half_standard_dimen"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_height="wrap_content"
                        android:text="@string/watt"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:animateLayoutChanges="true"
                    android:id="@+id/more_options_layout"
                    android:layout_marginTop="@dimen/standard_dimen"
                    android:orientation="horizontal">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:id="@+id/cost_edit_text"
                        android:inputType="numberDecimal"
                        android:hint="@string/cost"
                        android:text="0.1"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_underlineColor="@color/colorPrimary"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_floatingLabelTextColor="@color/colorPrimary"
                        app:met_floatingLabel="highlight"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:paddingStart="@dimen/half_standard_dimen"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_height="wrap_content"
                        android:text="@string/dollars_for_kwh"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:id="@+id/poll_fee_edit_text"
                        android:inputType="numberDecimal"
                        android:hint="@string/poll_fee"
                        android:maxLines="1"
                        android:layout_marginStart="@dimen/standard_dimen"
                        android:singleLine="true"
                        app:met_baseColor="@color/colorPrimary"
                        app:met_underlineColor="@color/colorPrimary"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_floatingLabelTextColor="@color/colorPrimary"
                        app:met_floatingLabel="highlight"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:paddingStart="@dimen/half_standard_dimen"
                        android:textSize="@dimen/text_size_normal"
                        android:layout_height="wrap_content"
                        android:text="@string/percent_sign"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/double_dimen"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:id="@+id/show_more_options"
                        android:layout_alignParentStart="true"
                        android:textColor="?attr/colorAccent"
                        android:text="@string/add_more_options"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/calculate_button"
                        android:layout_alignParentEnd="true"
                        android:padding="@dimen/half_standard_dimen"
                        android:layout_marginEnd="@dimen/standard_dimen"
                        android:background="?attr/colorAccent"
                        android:textColor="@color/white"
                        android:text="@string/calculate"/>

                </RelativeLayout>

                <android.support.v4.widget.ContentLoadingProgressBar
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"
                    android:id="@+id/table_loading_progress_bar"
                    android:layout_height="wrap_content" />


                <include layout="@layout/profit_table"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>